# win2x11cursor

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  README.md  pyproject.toml
Emu/: Alternate.ani  Busy.ani  Diagonal1.ani  Diagonal2.ani  Handwriting.ani  Help.ani  Horizontal.ani  Link.ani  Move.ani  Normal.ani  Person.ani  Pin.ani  Precision.ani  Text.ani  Unavailable.ani  Vertical.ani  Working.ani  install.inf
src/win2x11cursor/: __main__.py  archive.py  cli.py  source.py  windows_theme.py  xcursor_theme.py
src/x11_cursor_convertor/: __main__.py  cli.py
tests/: test_cli.py
