[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "win2x11cursor"
version = "0.1.0"
description = "Convert Windows cursor themes into installable X11/Xcursor themes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "win2xcur>=0.2.0,<0.3",
]

[project.scripts]
win2x11cursor = "win2x11cursor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
